--- a/less/type.less
+++ b/less/type.less
@@ -181,7 +181,7 @@ dt {
   font-weight: normal;
 }
 dd {
-  margin-left: @baseLineHeight;
+  margin-left: 21px;
 }
 // Horizontal layout (like forms)
 .dl-horizontal {
